# CW_DRF

./: pyproject.toml
config/: settings.py
habits/: models.py  pagination.py  tasks.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_options.py  0004_alter_habit_time_to_done.py  0005_alter_habit_period.py  0006_alter_habit_period.py
users/: models.py  serializers.py  views.py
users/migrations/: 0001_initial.py
